Added project library

--- a/static/templates/base_head.html
+++ b/static/templates/base_head.html
@@ -9,6 +9,9 @@
 <script src="/static/library.js?=11"></script>
 <script src="/static/entries_library.js?=11"></script>
 <script src="/static/sources_library.js?=11"></script>
-<script src="/static/listview.js?=11"></script>
+<script src="/static/project_library.js?=11"></script>
 
 <title>{title}</title>
+<script>
+   {base_script}
+</script>
